[metadata]
version = 0.0.1
license = GPL-v3
license_file = LICENSE
author = Guillaume W. Bres
author_email = guillaume.bressaix@gmail.com
description = Analog Devices AD9545,AD9546 clock synth management tools
long_description = file: README.md
url = https://github.com/gwbres/adi-ad9546
python_requires = >= 3.6

[egg_info]
tag_build = 
tag_date = 0
