[metadata]
name = adi-ad9546
version = 0.0.2
license = GPL-v3
license_file = LICENSE
author = Guillaume W. Bres
author_email = guillaume.bressaix@gmail.com
description = Analog Devices AD9545,AD9546 clock synth management tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gwbres/adi-ad9546
python_requires = >= 3.6
